// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates multiple nested messages sample output 1`] = `
"NSDictionary* mapCoordinate(Coordinate* obj) {
  return @{ 
    @\\"lat\\": @(obj.lat), 
    @\\"lng\\": @(obj.lng) 
  };
}


NSDictionary* mapLocation(Location* obj) {
  return @{ 
    @\\"coordinate\\": mapCoordinate(obj.coordinate), 
    @\\"addressString\\": obj.addressString ?: [NSNull null] 
  };
}


NSDictionary* mapSearchPlacesRequest(SearchPlacesRequest* obj) {
  return @{ 
    @\\"coordinate\\": mapCoordinate(obj.coordinate), 
    @\\"query\\": obj.query ?: [NSNull null] 
  };
}


NSDictionary* mapSearchLocationsRequest(SearchLocationsRequest* obj) {
  return @{ 
    @\\"lat\\": @(obj.lat), 
    @\\"lng\\": @(obj.lng) 
  };
}


NSDictionary* mapPlaces(Places* obj) {
  return @{ 
    @\\"locations\\": mapLocations(obj.locationsArray) 
  };
}


RCT_EXPORT_METHOD(searchPlaces:(SearchPlacesRequest *)req
  resolver:(RCTPromiseResolveBlock) resolve
  rejecter:(RCTPromiseRejectBlock) reject) {
  [_service searchPlacesWithRequest:req handler:^(Places *response, NSError *error) {
    if (error) {
      reject([@(error.code) stringValue], error.description, error);
      return;
    }

    NSLog(@\\"native SearchPlaces: %@\\", response);

    resolve(mapPlaces(response));
  }];
}

RCT_EXPORT_METHOD(searchLocations:(SearchLocationsRequest *)req
  resolver:(RCTPromiseResolveBlock) resolve
  rejecter:(RCTPromiseRejectBlock) reject) {
  [_service searchLocationsWithRequest:req handler:^(Location *response, NSError *error) {
    if (error) {
      reject([@(error.code) stringValue], error.description, error);
      return;
    }

    NSLog(@\\"native SearchLocations: %@\\", response);

    resolve(mapLocation(response));
  }];
}
"
`;

exports[`creates multiple service sample output 1`] = `
"NSDictionary* mapLocation(Location* obj) {
  return @{ 
    @\\"lat\\": @(obj.lat), 
    @\\"lng\\": @(obj.lng), 
    @\\"addressString\\": obj.addressString ?: [NSNull null] 
  };
}


NSDictionary* mapSearchPlacesRequest(SearchPlacesRequest* obj) {
  return @{ 
    @\\"lat\\": @(obj.lat), 
    @\\"lng\\": @(obj.lng), 
    @\\"query\\": obj.query ?: [NSNull null] 
  };
}


NSDictionary* mapSearchLocationsRequest(SearchLocationsRequest* obj) {
  return @{ 
    @\\"lat\\": @(obj.lat), 
    @\\"lng\\": @(obj.lng) 
  };
}


NSDictionary* mapPlaces(Places* obj) {
  return @{ 
    @\\"Locations\\": mapLocations(obj.LocationsArray) 
  };
}


RCT_EXPORT_METHOD(searchPlaces:(SearchPlacesRequest *)req
  resolver:(RCTPromiseResolveBlock) resolve
  rejecter:(RCTPromiseRejectBlock) reject) {
  [_service searchPlacesWithRequest:req handler:^(Places *response, NSError *error) {
    if (error) {
      reject([@(error.code) stringValue], error.description, error);
      return;
    }

    NSLog(@\\"native SearchPlaces: %@\\", response);

    resolve(mapPlaces(response));
  }];
}

RCT_EXPORT_METHOD(searchLocations:(SearchLocationsRequest *)req
  resolver:(RCTPromiseResolveBlock) resolve
  rejecter:(RCTPromiseRejectBlock) reject) {
  [_service searchLocationsWithRequest:req handler:^(Location *response, NSError *error) {
    if (error) {
      reject([@(error.code) stringValue], error.description, error);
      return;
    }

    NSLog(@\\"native SearchLocations: %@\\", response);

    resolve(mapLocation(response));
  }];
}
"
`;

exports[`creates nested sample output 1`] = `
"NSDictionary* mapLocation(Location* obj) {
  return @{ 
    @\\"lat\\": @(obj.lat), 
    @\\"lng\\": @(obj.lng), 
    @\\"addressString\\": obj.addressString ?: [NSNull null] 
  };
}


NSDictionary* mapSearchPlacesRequest(SearchPlacesRequest* obj) {
  return @{ 
    @\\"lat\\": @(obj.lat), 
    @\\"lng\\": @(obj.lng), 
    @\\"query\\": obj.query ?: [NSNull null] 
  };
}


NSMutableArray* mapLocations(NSMutableArray* input) {
  NSMutableArray *output = [[NSMutableArray alloc] init];
  for (Location *obj in input) {
    [output addObject: mapLocation(obj)];
  }

  return output;
}

NSDictionary* mapPlaces(Places* obj) {
  return @{ 
    @\\"Locations\\": mapLocations(obj.LocationsArray) 
  };
}


RCT_EXPORT_METHOD(searchPlaces:(SearchPlacesRequest *)req
  resolver:(RCTPromiseResolveBlock) resolve
  rejecter:(RCTPromiseRejectBlock) reject) {
  [_service searchPlacesWithRequest:req handler:^(Places *response, NSError *error) {
    if (error) {
      reject([@(error.code) stringValue], error.description, error);
      return;
    }

    NSLog(@\\"native SearchPlaces: %@\\", response);

    resolve(mapPlaces(response));
  }];
}
"
`;

exports[`creates sample output 1`] = `
"NSDictionary* mapReverseGeocodeRequest(ReverseGeocodeRequest* obj) {
  return @{ 
    @\\"lat\\": @(obj.lat), 
    @\\"lng\\": @(obj.lng) 
  };
}


NSDictionary* mapLocation(Location* obj) {
  return @{ 
    @\\"lat\\": @(obj.lat), 
    @\\"lng\\": @(obj.lng), 
    @\\"addressString\\": obj.addressString ?: [NSNull null] 
  };
}


RCT_EXPORT_METHOD(reverseGeocode:(ReverseGeocodeRequest *)req
  resolver:(RCTPromiseResolveBlock) resolve
  rejecter:(RCTPromiseRejectBlock) reject) {
  [_service reverseGeocodeWithRequest:req handler:^(Location *response, NSError *error) {
    if (error) {
      reject([@(error.code) stringValue], error.description, error);
      return;
    }

    NSLog(@\\"native ReverseGeocode: %@\\", response);

    resolve(mapLocation(response));
  }];
}
"
`;
